harness/fixtures/enforce-arrow-function/bad/async.ts
async function bar() {
  return 1;
}
